--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intro_screen_onboarding_flutter: ^1.0.0
   carousel_slider: ^4.2.1
   cached_network_image: ^3.3.1
+  google_mlkit_text_recognition: ^0.11.0
+  image_picker: ^1.0.7
 
 
 
